--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebas
 import { getAuth, signInWithPopup, GoogleAuthProvider, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 import { getFirestore, collection, addDoc, doc, setDoc, deleteDoc, onSnapshot, query, orderBy } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-// Firebase setup
+// Firebase config
 const firebaseConfig = {
   apiKey: "AIzaSyCLCUAiPz-sqhFDskG9g9AwyUI1RdTQWfk",
   authDomain: "marathi-crime-files.firebaseapp.com",
@@ -20,13 +20,14 @@ const firebaseConfig = {
   messagingSenderId: "973325762370",
   appId: "1:973325762370:web:4fb97306806bbe6cc0d2db"
 };
+
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 const provider = new GoogleAuthProvider();
 const ADMIN_EMAIL = "gulistankh2011@gmail.com";
 
-// DOM Elements
+// DOM
 const loginBtn = document.getElementById("loginBtn");
 const logoutBtn = document.getElementById("logoutBtn");
 const editorArea = document.getElementById("editorArea");
@@ -42,11 +43,11 @@ const modalBg = document.getElementById("modalBg");
 const modalContent = document.getElementById("modalContent");
 
 // Login/Logout
-loginBtn.onclick = () => signInWithPopup(auth, provider).catch(e => alert(e.message));
-logoutBtn.onclick = () => signOut(auth);
+loginBtn.onclick = ()=>signInWithPopup(auth, provider).catch(e=>alert(e.message));
+logoutBtn.onclick = ()=>signOut(auth);
 
-onAuthStateChanged(auth, user => {
-  if(user && user.email === ADMIN_EMAIL){
+onAuthStateChanged(auth,user=>{
+  if(user && user.email===ADMIN_EMAIL){
     editorArea.classList.remove("hidden");
     noticeEditor.classList.remove("hidden");
     loginBtn.classList.add("hidden");
@@ -60,72 +61,73 @@ onAuthStateChanged(auth, user => {
 });
 
 // Add blocks
-document.getElementById("addTextBtn").onclick = () => {
+document.getElementById("addTextBtn").onclick = ()=>{
   const t = document.createElement("textarea");
   t.placeholder = "Write paragraph...";
   t.dataset.type = "text";
   t.className = "border p-2 w-full mb-2 rounded";
   blocksList.appendChild(t);
-}
-document.getElementById("addImageBtn").onclick = () => {
+};
+document.getElementById("addImageBtn").onclick = ()=>{
   const inp = document.createElement("input");
   inp.type = "file";
   inp.dataset.type = "image";
   inp.className = "w-full mb-2";
   blocksList.appendChild(inp);
-}
+};
 
 // Publish news
-document.getElementById("publishBtn").onclick = async() => {
+document.getElementById("publishBtn").onclick = async()=>{
   const title = aTitle.value.trim();
   const cat = aCat.value.trim();
   if(!title) return alert("Enter title!");
   const blocks = [];
   for(const el of blocksList.children){
-    if(el.dataset.type === "text" && el.value.trim()) blocks.push({type:"text", text:el.value.trim()});
-    else if(el.type === "file" && el.files.length > 0){
+    if(el.dataset.type==="text" && el.value.trim()) blocks.push({type:"text",text:el.value.trim()});
+    else if(el.type==="file" && el.files.length>0){
       const formData = new FormData();
-      formData.append("image", el.files[0]);
-      const res = await fetch(`https://api.imgbb.com/1/upload?key=2387b6e1ec3474b6df29aaa462344077`, {method:"POST", body:formData});
+      formData.append("image",el.files[0]);
+      const res = await fetch(`https://api.imgbb.com/1/upload?key=2387b6e1ec3474b6df29aaa462344077`,{method:"POST",body:formData});
       const data = await res.json();
-      if(data.data?.url) blocks.push({type:"image", url:data.data.url});
+      if(data.data?.url) blocks.push({type:"image",url:data.data.url});
     }
   }
-  if(blocks.length === 0) return alert("Add content!");
-  await addDoc(collection(db,"news"), {title, category:cat, blocks, time:Date.now()});
-  aTitle.value = aCat.value = ""; blocksList.innerHTML = "";
-}
+  if(blocks.length===0) return alert("Add content!");
+  await addDoc(collection(db,"news"),{title,category:cat,blocks,time:Date.now()});
+  aTitle.value=aCat.value=""; blocksList.innerHTML="";
+};
 
-// Load posts
-onSnapshot(query(collection(db,"news"), orderBy("time","desc")), snap => {
-  const posts = snap.docs.map(d => ({id:d.id,...d.data()}));
+// Load posts & render
+onSnapshot(query(collection(db,"news"),orderBy("time","desc")),snap=>{
+  const posts = snap.docs.map(d=>({id:d.id,...d.data()}));
   renderPosts(posts);
+  updateHeadlineTicker(posts);
 });
 
 // Render posts
 function renderPosts(posts){
-  postsArea.innerHTML = "";
-  posts.forEach(post => {
-    const firstImg = post.blocks.find(b => b.type==="image")?.url || "https://via.placeholder.com/300x200?text=No+Image";
-    const firstText = post.blocks.find(b => b.type==="text")?.text.substring(0,80)+"..." || "";
+  postsArea.innerHTML="";
+  posts.forEach(post=>{
+    const firstImg = post.blocks.find(b=>b.type==="image")?.url || "https://via.placeholder.com/300x200?text=No+Image";
+    const firstText = post.blocks.find(b=>b.type==="text")?.text.substring(0,80)+"..." || "";
     const card = document.createElement("div");
     card.className="card";
     card.innerHTML = `<img src='${firstImg}' class='card-img'><div class='card-body'><h3>${post.title}</h3><p>${firstText}</p></div>`;
-    card.onclick = () => showModal(post);
+    card.onclick = ()=>showModal(post);
     postsArea.appendChild(card);
   });
-  headlineText.textContent = posts.slice(0,5).map(p=>p.title).join(" — ");
 }
 
 // Modal
 function showModal(post){
-  modalContent.innerHTML = `<h2 class='text-lg font-bold mb-2'>${post.title}</h2>`;
-  post.blocks.forEach(b => {
+  modalContent.innerHTML = `<span id="modalClose" style="cursor:pointer;float:right;color:red;font-weight:bold;">X</span>
+                            <h2 class='text-lg font-bold mb-2'>${post.title}</h2>`;
+  post.blocks.forEach(b=>{
     if(b.type==="text") modalContent.innerHTML += `<p class='mb-2 text-gray-800'>${b.text}</p>`;
     else modalContent.innerHTML += `<img src='${b.url}' class='w-full mb-2 object-contain'>`;
   });
 
-  onAuthStateChanged(auth, user => {
+  onAuthStateChanged(auth,user=>{
     if(user && user.email===ADMIN_EMAIL){
       const delBtn = document.createElement("button");
       delBtn.textContent="❌ Delete News";
@@ -138,34 +140,50 @@ function showModal(post){
     }
   });
 
+  const closeBtn = modalContent.querySelector("#modalClose");
+  closeBtn.onclick = ()=>modalBg.style.display="none";
+
   modalBg.style.display="flex";
 }
 
-// Close modal on background click
-modalBg.onclick = (e) => { if(e.target === modalBg) modalBg.style.display="none"; }
-
-// Menu toggle
-function toggleMenu(){ document.getElementById("menuList").classList.toggle("hidden"); }
-
-// Notice
-document.getElementById("saveNoticeBtn").onclick = async () => {
-  const text = noticeInput.value.trim();
-  if(!text) return alert("Enter notice text!");
-  await setDoc(doc(db,"settings","notice"), {text, time:Date.now()});
-  noticeInput.value = "";
+// Close modal on outside click
+modalBg.onclick = e=>{
+  if(e.target === modalBg) modalBg.style.display="none";
 };
 
-// Live notice scroll
+// Menu toggle
+function toggleMenu(){document.getElementById("menuList").classList.toggle("hidden");}
+
+// Save notice
+const saveNoticeBtn = document.getElementById("saveNoticeBtn");
+saveNoticeBtn.onclick = async () => {
+  const text = noticeInput.value.trim();
+  if(!text) return alert("Enter notice text!");
+  try {
+    await setDoc(doc(db, "settings", "notice"), { text, time: Date.now() });
+    alert("Notice saved!");
+    noticeInput.value = "";
+  } catch (e) { alert("Error: "+e.message); }
+};
+
+// Live notice ticker
 const noticeRef = doc(db,"settings","notice");
-onSnapshot(noticeRef, snap => {
+onSnapshot(noticeRef, snap=>{
+  const ticker = document.querySelector(".ticker-text");
   if(snap.exists()){
     noticeText.textContent = snap.data().text;
-    const ticker = document.querySelector(".ticker-text");
-    ticker.style.animation = "none";
-    void ticker.offsetWidth;
-    ticker.style.animation = "scrollNotice 10s linear infinite";
-  }
+    ticker.style.animation = "none"; void ticker.offsetWidth;
+    ticker.style.animation = "scrollTicker 15s linear infinite";
+  } else { noticeText.textContent=""; }
 });
+
+// Headline ticker
+function updateHeadlineTicker(posts){
+  const headlineElem = document.getElementById("headlineText");
+  headlineElem.textContent = posts.slice(0,10).map(p=>p.title).join(" — ");
+  headlineElem.style.animation = "none"; void headlineElem.offsetWidth;
+  headlineElem.style.animation = "scrollTicker 15s linear infinite";
+}
 
 </script>
 
@@ -175,14 +193,18 @@ header{display:flex;justify-between;align-items:center;padding:8px 12px;backgrou
 header img{height:40px;width:auto;border-radius:6px;}
 .nav-btn,.auth-btn{padding:3px 6px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;font-size:12px;}
 .nav-btn:hover,.auth-btn:hover{transform:scale(1.05);}
-.notice-ticker{background:#dc2626;color:white;font-weight:600;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;position:sticky;top:52px;z-index:250;}
-.ticker-text{display:inline-block;padding-left:100%;animation:scrollNotice 10s linear infinite;}
-@keyframes scrollNotice{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
-.headline-ticker{background:#2563eb;color:white;font-weight:500;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;}
+.notice-ticker, .headline-ticker{
+  background:#dc2626;color:white;font-weight:600;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;position:sticky;top:52px;z-index:250;
+}
+.ticker-text, .headline-text-inner{
+  display:inline-block;padding-left:100%;white-space:nowrap;
+  animation:scrollTicker 15s linear infinite;
+}
+@keyframes scrollTicker{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
 .posts-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:12px;padding:8px;margin-top:10px;}
-.card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);cursor:pointer;transition:transform 0.2s;}
+.card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);cursor:pointer;transition:transform 0.2s;position:relative;}
 .card:hover{transform:scale(1.02);}
-.card-img{width:100%;height:auto;object-fit:contain;}
+.card-img{width:100%;height:auto;object-fit:contain;display:block;}
 .card-body{padding:8px;}
 .card-body h3{font-weight:700;font-size:18px;margin-bottom:4px;}
 .card-body p{font-size:14px;color:#555;margin-bottom:6px;}
@@ -217,7 +239,7 @@ header img{height:40px;width:auto;border-radius:6px;}
 </header>
 
 <div class="notice-ticker"><span class="ticker-text" id="noticeText"></span></div>
-<div class="headline-ticker"><span id="headlineText"></span></div>
+<div class="headline-ticker"><span class="headline-text-inner" id="headlineText"></span></div>
 
 <section id="editorArea" class="editor hidden">
   <h2>🖋️ Admin: Create/Edit News</h2>
@@ -237,7 +259,6 @@ header img{height:40px;width:auto;border-radius:6px;}
   <button id="saveNoticeBtn">Save Notice</button>
 </section>
 
-<!-- Modal -->
 <div id="modalBg"><div id="modalContent"></div></div>
 
 </body>
