--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@ import { getAuth, signInWithPopup, GoogleAuthProvider, signOut, onAuthStateChang
 import { getFirestore, collection, addDoc, doc, setDoc, deleteDoc, onSnapshot, query, orderBy } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
 // Firebase setup
-const firebaseConfig = {apiKey:"AIzaSyCLCUAiPz-sqhFDskG9g9AwyUI1RdTQWfk",authDomain:"marathi-crime-files.firebaseapp.com",projectId:"marathi-crime-files",storageBucket:"marathi-crime-files.appspot.com",messagingSenderId:"973325762370",appId:"1:973325762370:web:4fb97306806bbe6cc0d2db"};
+const firebaseConfig = {
+  apiKey: "AIzaSyCLCUAiPz-sqhFDskG9g9AwyUI1RdTQWfk",
+  authDomain: "marathi-crime-files.firebaseapp.com",
+  projectId: "marathi-crime-files",
+  storageBucket: "marathi-crime-files.appspot.com",
+  messagingSenderId: "973325762370",
+  appId: "1:973325762370:web:4fb97306806bbe6cc0d2db"
+};
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
@@ -33,33 +40,56 @@ const noticeText = document.getElementById("noticeText");
 const headlineText = document.getElementById("headlineText");
 const modalBg = document.getElementById("modalBg");
 const modalContent = document.getElementById("modalContent");
+const menuBtn = document.querySelector(".nav-btn");
+const menuList = document.getElementById("menuList");
 
 // Login/Logout
 loginBtn.onclick = ()=>signInWithPopup(auth, provider).catch(e=>alert(e.message));
 logoutBtn.onclick = ()=>signOut(auth);
 
 onAuthStateChanged(auth,user=>{
-  if(user && user.email===ADMIN_EMAIL){editorArea.classList.remove("hidden");noticeEditor.classList.remove("hidden");loginBtn.classList.add("hidden");logoutBtn.classList.remove("hidden");}
-  else{editorArea.classList.add("hidden");noticeEditor.classList.add("hidden");loginBtn.classList.remove("hidden");logoutBtn.classList.add("hidden");}
+  if(user && user.email===ADMIN_EMAIL){
+    editorArea.classList.remove("hidden");
+    noticeEditor.classList.remove("hidden");
+    loginBtn.classList.add("hidden");
+    logoutBtn.classList.remove("hidden");
+  } else {
+    editorArea.classList.add("hidden");
+    noticeEditor.classList.add("hidden");
+    loginBtn.classList.remove("hidden");
+    logoutBtn.classList.add("hidden");
+  }
 });
 
 // Add blocks
-document.getElementById("addTextBtn").onclick = ()=>{const t=document.createElement("textarea");t.placeholder="Write paragraph...";t.dataset.type="text";t.className="border p-2 w-full mb-2 rounded";blocksList.appendChild(t);}
-document.getElementById("addImageBtn").onclick = ()=>{const inp=document.createElement("input");inp.type="file";inp.dataset.type="image";inp.className="w-full mb-2";blocksList.appendChild(inp);}
+document.getElementById("addTextBtn").onclick = ()=> {
+  const t = document.createElement("textarea");
+  t.placeholder = "Write paragraph...";
+  t.dataset.type = "text";
+  t.className = "border p-2 w-full mb-2 rounded";
+  blocksList.appendChild(t);
+}
+document.getElementById("addImageBtn").onclick = ()=> {
+  const inp = document.createElement("input");
+  inp.type = "file";
+  inp.dataset.type = "image";
+  inp.className = "w-full mb-2";
+  blocksList.appendChild(inp);
+}
 
 // Publish news
-document.getElementById("publishBtn").onclick = async()=>{
-  const title=aTitle.value.trim();
-  const cat=aCat.value.trim();
+document.getElementById("publishBtn").onclick = async()=> {
+  const title = aTitle.value.trim();
+  const cat = aCat.value.trim();
   if(!title) return alert("Enter title!");
-  const blocks=[];
+  const blocks = [];
   for(const el of blocksList.children){
     if(el.dataset.type==="text" && el.value.trim()) blocks.push({type:"text",text:el.value.trim()});
     else if(el.type==="file" && el.files.length>0){
-      const formData=new FormData();
+      const formData = new FormData();
       formData.append("image",el.files[0]);
-      const res=await fetch(`https://api.imgbb.com/1/upload?key=2387b6e1ec3474b6df29aaa462344077`,{method:"POST",body:formData});
-      const data=await res.json();
+      const res = await fetch(`https://api.imgbb.com/1/upload?key=2387b6e1ec3474b6df29aaa462344077`,{method:"POST",body:formData});
+      const data = await res.json();
       if(data.data?.url) blocks.push({type:"image",url:data.data.url});
     }
   }
@@ -69,52 +99,89 @@ document.getElementById("publishBtn").onclick = async()=>{
 }
 
 // Load posts
-let currentPosts=[];
+let currentPosts = [];
 onSnapshot(query(collection(db,"news"),orderBy("time","desc")),snap=>{
-  currentPosts=snap.docs.map(d=>({id:d.id,...d.data()}));
+  currentPosts = snap.docs.map(d=>({id:d.id,...d.data()}));
   renderPosts(currentPosts);
   startHeadlineTicker(currentPosts);
 });
 
 // Render posts
-function renderPosts(posts){postsArea.innerHTML="";posts.forEach(post=>{const firstImg=post.blocks.find(b=>b.type==="image")?.url||"https://via.placeholder.com/300x200?text=No+Image";const firstText=post.blocks.find(b=>b.type==="text")?.text.substring(0,80)+"..."||"";const card=document.createElement("div");card.className="card";card.innerHTML=`<img src='${firstImg}' class='card-img'><div class='card-body'><h3>${post.title}</h3><p>${firstText}</p></div>`;card.onclick=()=>showModal(post);postsArea.appendChild(card);});}
+function renderPosts(posts){
+  postsArea.innerHTML="";
+  posts.forEach(post=>{
+    const firstImg = post.blocks.find(b=>b.type==="image")?.url || "https://via.placeholder.com/300x200?text=No+Image";
+    const firstText = post.blocks.find(b=>b.type==="text")?.text.substring(0,80)+"..." || "";
+    const card = document.createElement("div");
+    card.className="card";
+    card.innerHTML = `<img src='${firstImg}' class='card-img'><div class='card-body'><h3>${post.title}</h3><p>${firstText}</p></div>`;
+    card.onclick = ()=>showModal(post);
+    postsArea.appendChild(card);
+  });
+}
 
 // Modal
 function showModal(post){
-  modalContent.innerHTML=`<span id="modalClose" style="cursor:pointer;float:right;color:red;font-weight:bold;">X</span><h2 class='text-lg font-bold mb-2'>${post.title}</h2>`;
-  post.blocks.forEach(b=>{if(b.type==="text") modalContent.innerHTML+=`<p class='mb-2 text-gray-800'>${b.text}</p>`;else modalContent.innerHTML+=`<img src='${b.url}' class='w-full mb-2 object-contain'>`;});
-  onAuthStateChanged(auth,user=>{if(user && user.email===ADMIN_EMAIL){const delBtn=document.createElement("button");delBtn.textContent="❌ Delete News";delBtn.className="bg-red-600 text-white p-2 rounded mt-2";delBtn.onclick=async()=>{if(confirm("Are you sure?")) await deleteDoc(doc(db,"news",post.id));modalBg.style.display="none";};modalContent.appendChild(delBtn);}});
-  const closeBtn=modalContent.querySelector("#modalClose");closeBtn.onclick=()=>modalBg.style.display="none";
-  modalBg.onclick=(e)=>{if(e.target===modalBg) modalBg.style.display="none";}
+  modalContent.innerHTML = `<span id="modalClose" style="cursor:pointer;float:right;color:red;font-weight:bold;">X</span>
+                            <h2 class='text-lg font-bold mb-2'>${post.title}</h2>`;
+  post.blocks.forEach(b=>{
+    if(b.type==="text") modalContent.innerHTML += `<p class='mb-2 text-gray-800'>${b.text}</p>`;
+    else modalContent.innerHTML += `<img src='${b.url}' class='w-full mb-2 object-contain'>`;
+  });
+
+  onAuthStateChanged(auth,user=>{
+    if(user && user.email===ADMIN_EMAIL){
+      const delBtn = document.createElement("button");
+      delBtn.textContent="❌ Delete News";
+      delBtn.className="bg-red-600 text-white p-2 rounded mt-2";
+      delBtn.onclick = async()=>{if(confirm("Are you sure?")) await deleteDoc(doc(db,"news",post.id)); modalBg.style.display="none";};
+      modalContent.appendChild(delBtn);
+    }
+  });
+
+  const closeBtn = modalContent.querySelector("#modalClose");
+  closeBtn.onclick = ()=>modalBg.style.display="none";
+
+  modalBg.onclick = (e)=>{ if(e.target===modalBg) modalBg.style.display="none"; }
   modalBg.style.display="flex";
 }
 
-document.addEventListener("DOMContentLoaded", () => {
-  const menuBtn = document.querySelector(".nav-btn");
-  const menuList = document.getElementById("menuList");
+// Menu toggle
+menuBtn.addEventListener("click", ()=>menuList.classList.toggle("hidden"));
 
-  menuBtn.addEventListener("click", () => {
-    menuList.classList.toggle("hidden");
-  });
+// Notice Save
+document.getElementById("saveNoticeBtn").onclick = async () => {
+  const text = noticeInput.value.trim();
+  if(!text) return alert("Enter notice text!");
+  try {
+    await setDoc(doc(db, "settings", "notice"), { text, time: Date.now() });
+    alert("Notice saved!");
+    noticeInput.value = "";
+  } catch (e) { alert("Error saving notice: "+e.message); }
+};
+
+// Notice Live Scroll
+const noticeRef = doc(db, "settings", "notice");
+onSnapshot(noticeRef, snap => {
+  const ticker = document.querySelector(".ticker-text");
+  if (snap.exists()) {
+    noticeText.textContent = snap.data().text;
+    ticker.style.animation = "none";
+    void ticker.offsetWidth;
+    ticker.style.animation = "scrollNotice 12s linear infinite";
+  } else noticeText.textContent = "";
 });
 
-
-// Notice
-document.getElementById("saveNoticeBtn").onclick=async()=>{const text=noticeInput.value.trim();if(!text)return alert("Enter notice text!");try{await setDoc(doc(db,"settings","notice"),{text,time:Date.now()});alert("Notice saved!");noticeInput.value="";}catch(e){alert("Error saving notice: "+e.message);}}
-const noticeRef=doc(db,"settings","notice");
-onSnapshot(noticeRef,snap=>{const ticker=document.querySelector(".ticker-text");if(snap.exists()){noticeText.textContent=snap.data().text;ticker.style.animation="none";void ticker.offsetWidth;ticker.style.animation="scrollNotice 15s linear infinite";}else{noticeText.textContent="";}});
-
-// Headline Ticker with separator 🛑
+// Headline Ticker - Smooth Scroll
 function startHeadlineTicker(posts){
-  const headlineEl=document.getElementById("headlineText");
-  if(!posts || posts.length===0){headlineEl.textContent="";return;}
-  const text=posts.map(p=>p.title).join(" 🛑 ")+" 🛑 ";
-  headlineEl.textContent=text;
-  headlineEl.style.animation="none";
+  const headlineEl = document.getElementById("headlineText");
+  if(!posts || posts.length===0){ headlineEl.textContent = ""; return; }
+  const text = posts.map(p=>"BREAKING: "+p.title).join(" — ") + " — ";
+  headlineEl.textContent = text;
+  headlineEl.style.animation = "none";
   void headlineEl.offsetWidth;
-  const speedPerChar=0.2; // seconds per character
-  const duration=Math.max(10,text.length*speedPerChar);
-  headlineEl.style.animation=`scrollHeadline ${duration}s linear infinite`;
+  const speed = Math.max(8, text.length/2); // adjust speed here
+  headlineEl.style.animation = `scrollHeadline ${speed}s linear infinite`;
 }
 
 </script>
@@ -126,7 +193,7 @@ header img{height:40px;width:auto;border-radius:6px;}
 .nav-btn,.auth-btn{padding:3px 6px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;font-size:12px;}
 .nav-btn:hover,.auth-btn:hover{transform:scale(1.05);}
 .notice-ticker{background:#dc2626;color:white;font-weight:600;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;position:sticky;top:52px;z-index:250;}
-.ticker-text{display:inline-block;padding-left:100%;animation:scrollNotice 15s linear infinite;}
+.ticker-text{display:inline-block;padding-left:100%;animation:scrollNotice 12s linear infinite;}
 @keyframes scrollNotice{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
 .headline-ticker{background:#2563eb;color:white;font-weight:500;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;}
 @keyframes scrollHeadline{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
@@ -143,18 +210,20 @@ header img{height:40px;width:auto;border-radius:6px;}
 .editor button{padding:6px 12px;margin-right:6px;border-radius:6px;background:#1e40af;color:white;cursor:pointer;}
 #modalBg{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:1000;}
 #modalContent{background:#fff;padding:12px;border-radius:8px;max-height:90vh;overflow-y:auto;width:90%;max-width:600px;}
+#menuList{z-index:1000;position:absolute;}
 </style>
 
 </head>
 <body>
+
 <header class="flex justify-between items-center">
   <div class="flex items-center space-x-2">
     <img src="https://i.postimg.cc/6Q5TYPVR/Whats-App-Image-2025-10-26-at-2-42-16-PM.jpg" alt="Logo">
     <h1 class="font-bold text-base sm:text-lg">Marathi Crime Files</h1>
   </div>
   <div class="relative">
-    <button onclick="toggleMenu()" class="nav-btn">☰ Menu</button>
-    <div id="menuList" class="hidden absolute right-0 mt-1 bg-white text-blue-900 rounded-md shadow-lg overflow-hidden z-[10000]">
+    <button class="nav-btn">☰ Menu</button>
+    <div id="menuList" class="hidden absolute right-0 mt-1 bg-white text-blue-900 rounded-md shadow-lg overflow-hidden">
       <button class="dropdown-btn">Story</button>
       <button class="dropdown-btn">Gumshuda</button>
       <button class="dropdown-btn">Lawarish</button>
@@ -166,8 +235,10 @@ header img{height:40px;width:auto;border-radius:6px;}
     <button id="logoutBtn" class="auth-btn bg-red-600 text-white hidden">Logout</button>
   </div>
 </header>
+
 <div class="notice-ticker"><span class="ticker-text" id="noticeText"></span></div>
 <div class="headline-ticker"><span id="headlineText"></span></div>
+
 <section id="editorArea" class="editor hidden">
   <h2>🖋️ Admin: Create/Edit News</h2>
   <input id="aTitle" placeholder="Title">
@@ -177,12 +248,16 @@ header img{height:40px;width:auto;border-radius:6px;}
   <button id="addImageBtn">Add Image</button>
   <button id="publishBtn">Publish</button>
 </section>
+
 <section id="postsArea" class="posts-grid"></section>
+
 <section id="noticeEditor" class="editor hidden">
   <h2>📰 Admin Notice</h2>
   <input id="noticeInput" placeholder="Enter notice text...">
   <button id="saveNoticeBtn">Save Notice</button>
 </section>
+
 <div id="modalBg"><div id="modalContent"></div></div>
+
 </body>
 </html>
