--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@ const noticeText = document.getElementById("noticeText");
 const headlineText = document.getElementById("headlineText");
 const modalBg = document.getElementById("modalBg");
 const modalContent = document.getElementById("modalContent");
-const menuBtn = document.querySelector(".nav-btn");
-const menuList = document.getElementById("menuList");
 
 // Login/Logout
 loginBtn.onclick = ()=>signInWithPopup(auth, provider).catch(e=>alert(e.message));
@@ -62,14 +60,14 @@ onAuthStateChanged(auth,user=>{
 });
 
 // Add blocks
-document.getElementById("addTextBtn").onclick = ()=> {
+document.getElementById("addTextBtn").onclick = ()=>{
   const t = document.createElement("textarea");
   t.placeholder = "Write paragraph...";
   t.dataset.type = "text";
   t.className = "border p-2 w-full mb-2 rounded";
   blocksList.appendChild(t);
 }
-document.getElementById("addImageBtn").onclick = ()=> {
+document.getElementById("addImageBtn").onclick = ()=>{
   const inp = document.createElement("input");
   inp.type = "file";
   inp.dataset.type = "image";
@@ -78,7 +76,7 @@ document.getElementById("addImageBtn").onclick = ()=> {
 }
 
 // Publish news
-document.getElementById("publishBtn").onclick = async()=> {
+document.getElementById("publishBtn").onclick = async()=>{
   const title = aTitle.value.trim();
   const cat = aCat.value.trim();
   if(!title) return alert("Enter title!");
@@ -134,7 +132,10 @@ function showModal(post){
       const delBtn = document.createElement("button");
       delBtn.textContent="❌ Delete News";
       delBtn.className="bg-red-600 text-white p-2 rounded mt-2";
-      delBtn.onclick = async()=>{if(confirm("Are you sure?")) await deleteDoc(doc(db,"news",post.id)); modalBg.style.display="none";};
+      delBtn.onclick = async()=>{
+        if(confirm("Are you sure?")) await deleteDoc(doc(db,"news",post.id));
+        modalBg.style.display="none";
+      };
       modalContent.appendChild(delBtn);
     }
   });
@@ -142,12 +143,15 @@ function showModal(post){
   const closeBtn = modalContent.querySelector("#modalClose");
   closeBtn.onclick = ()=>modalBg.style.display="none";
 
-  modalBg.onclick = (e)=>{ if(e.target===modalBg) modalBg.style.display="none"; }
+  modalBg.onclick = (e)=>{
+    if(e.target===modalBg) modalBg.style.display="none";
+  }
+
   modalBg.style.display="flex";
 }
 
 // Menu toggle
-menuBtn.addEventListener("click", ()=>menuList.classList.toggle("hidden"));
+function toggleMenu(){document.getElementById("menuList").classList.toggle("hidden");}
 
 // Notice Save
 document.getElementById("saveNoticeBtn").onclick = async () => {
@@ -157,7 +161,9 @@ document.getElementById("saveNoticeBtn").onclick = async () => {
     await setDoc(doc(db, "settings", "notice"), { text, time: Date.now() });
     alert("Notice saved!");
     noticeInput.value = "";
-  } catch (e) { alert("Error saving notice: "+e.message); }
+  } catch (e) {
+    alert("Error saving notice: " + e.message);
+  }
 };
 
 // Notice Live Scroll
@@ -168,22 +174,27 @@ onSnapshot(noticeRef, snap => {
     noticeText.textContent = snap.data().text;
     ticker.style.animation = "none";
     void ticker.offsetWidth;
-    ticker.style.animation = "scrollNotice 12s linear infinite";
-  } else noticeText.textContent = "";
+    ticker.style.animation = "scrollNotice 15s linear infinite";
+  } else {
+    noticeText.textContent = "";
+  }
 });
 
-// Headline Ticker - Smooth Scroll
+// Headline Ticker - Breaking News
 function startHeadlineTicker(posts){
   const headlineEl = document.getElementById("headlineText");
-  if(!posts || posts.length===0){ headlineEl.textContent = ""; return; }
-  const text = posts.map(p=>"BREAKING: "+p.title).join(" — ") + " — ";
+  if(!posts || posts.length===0){
+    headlineEl.textContent = "";
+    headlineEl.style.animation = "none";
+    return;
+  }
+  const text = posts.map(p=>"BREAKING: "+p.title).join("  —  ") + "  —  ";
   headlineEl.textContent = text;
   headlineEl.style.animation = "none";
   void headlineEl.offsetWidth;
-  const speed = Math.max(8, text.length/2); // adjust speed here
+  const speed = Math.max(8, text.length / 2);
   headlineEl.style.animation = `scrollHeadline ${speed}s linear infinite`;
 }
-
 </script>
 
 <style>
@@ -193,11 +204,11 @@ header img{height:40px;width:auto;border-radius:6px;}
 .nav-btn,.auth-btn{padding:3px 6px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;font-size:12px;}
 .nav-btn:hover,.auth-btn:hover{transform:scale(1.05);}
 .notice-ticker{background:#dc2626;color:white;font-weight:600;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;position:sticky;top:52px;z-index:250;}
-.ticker-text{display:inline-block;padding-left:100%;animation:scrollNotice 12s linear infinite;}
+.ticker-text{display:inline-block;padding-left:100%;animation:scrollNotice 15s linear infinite;}
 @keyframes scrollNotice{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
 .headline-ticker{background:#2563eb;color:white;font-weight:500;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;}
-@keyframes scrollHeadline{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
 #headlineText{display:inline-block;white-space:nowrap;padding-left:100%;}
+@keyframes scrollHeadline{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
 .posts-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:12px;padding:8px;margin-top:10px;}
 .card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);cursor:pointer;transition:transform 0.2s;position:relative;}
 .card:hover{transform:scale(1.02);}
@@ -210,7 +221,6 @@ header img{height:40px;width:auto;border-radius:6px;}
 .editor button{padding:6px 12px;margin-right:6px;border-radius:6px;background:#1e40af;color:white;cursor:pointer;}
 #modalBg{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:1000;}
 #modalContent{background:#fff;padding:12px;border-radius:8px;max-height:90vh;overflow-y:auto;width:90%;max-width:600px;}
-#menuList{z-index:1000;position:absolute;}
 </style>
 
 </head>
@@ -222,8 +232,8 @@ header img{height:40px;width:auto;border-radius:6px;}
     <h1 class="font-bold text-base sm:text-lg">Marathi Crime Files</h1>
   </div>
   <div class="relative">
-    <button class="nav-btn">☰ Menu</button>
-    <div id="menuList" class="hidden absolute right-0 mt-1 bg-white text-blue-900 rounded-md shadow-lg overflow-hidden">
+    <button onclick="toggleMenu()" class="nav-btn">☰ Menu</button>
+    <div id="menuList" class="hidden absolute right-0 mt-1 bg-white text-blue-900 rounded-md shadow-lg overflow-hidden z-[10000]">
       <button class="dropdown-btn">Story</button>
       <button class="dropdown-btn">Gumshuda</button>
       <button class="dropdown-btn">Lawarish</button>
